Version 5.0.4

  Bugs fixed
  ----------
  Bug #25443 ExecuteScalar() hangs when more than one bad result 
  Bug #24802 Error Handling 
  Bug #25614 After connection is closed, and opened again UTF-8 characters are not read well 
  
  Other changes
  -------------
  Return parameters created with DeriveParameters now have the name RETURN_VALUE
  Fixed problem with parameter name hashing where the hashes were not getting updated
       or removed in certain situations.

Version 5.0.3 12-31-2006

  Bugs fixed
  ----------
  Bug #23687 Deleting a connection to a disconnected server causes a failed assertion 
  Bug #24565 Inferring DbType fails when reusing commands and the first time the value is nul 
  Bug #24661 mysql-connector-net-5.0.2-beta Driver.IsTooOld() Error.... 
  Bug #23905 Stored procedure usages is not thread safe 
  Bug #25033 Exception raised/ HANG if no SELECT privileges granted for stored procedure call 
      [this is a correction;  a previous change log entry indicated that Connector/Net
       no longer required select privs on mysql database.  This is not true and select privs
       are required. This will be fixed when the server exposes procedure parameters via
       information schema.]
  Bug #25013 Return Value parameter not found 
  Bug #25151 Reading from the stream has failed Exception in MySQL Connector 5.0.2 
  Bug #22400 Nested transactions 

  Other changes
  -------------
  SSL now working.  [Thanks Alessandro Muzzetta]
  Fixed ViewColumns GetSchema collection
  Improved CommandBuilder.DeriveParameters to use the procedure cache if possible

Version 5.0.2 11-3-2006

  Bugs fixed
  ----------
  Bug #23268 System.FormatException when invoking procedure with ENUM input parameter 	
  Bug #23538 Exception thrown when GetSchemaTable is called and "fields" is null. 
  Bug #23245 Connector Net 5.01 Beta Installer produces Antivirus Error Message 
  Bug #23758 Unable to connect to any server - IPv6 related 