@@ -5,6 +5,7 @@ Version 5.0.4
   Bug #25443 ExecuteScalar() hangs when more than one bad result 
   Bug #24802 Error Handling 
   Bug #25614 After connection is closed, and opened again UTF-8 characters are not read well 
+  Bug #25625 Crashes when calling with CommandType set to StoredProcedure 
   
   Other changes
   -------------
